--- a/src/app/meu-componente/meu-componente.component.html
+++ b/src/app/meu-componente/meu-componente.component.html
@@ -1,27 +1,23 @@
-<form>
-   <div class="mb-3">
-     <label for="exampleInputEmail1" class="form-label">Email address</label>
+<form (ngSubmit)="onSubmit()">
+  <div class="mb-3">
+    <label for="inputNome" class="form-label">Nome</label>
+    <input type="text" class="form-control" id="inputNome" name="nome" [(ngModel)]="model.nome" >
+  </div>
+  
+  <div class="mb-3">
+    <label for="inputEmail" class="form-label">Email</label>
+    <input type="email" class="form-control" name="email" id="inputEmail" [(ngModel)]="model.email" >
+  </div>
 
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  <div class="mb-3">
+    <label for="inputTel" class="form-label">Telefone</label>
+    <input type="tel" class="form-control" name="tel" id="inputTel" [(ngModel)]="model.telefone">
+  </div>
 
-                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-
-                    </div>
-
-                      <div class="mb-3">
-
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-
-                              <input type="password" class="form-control" id="exampleInputPassword1">
-
-                                </div>
-
-                                  <div class="mb-3 form-check">
-
-                                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-
-                                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-
-                                            </div>
-                                              <button type="submit" class="btn btn-primary">Submit</button>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
